--- a/portfolio.html
+++ b/portfolio.html
@@ -393,28 +393,24 @@
                                             <!-- portfolio-item -->
 
 
-                                            <!-- portfolio-item - lightbox gallery 
-                                            <div class="media-cell media format-gallery hentry">
+                                            <!-- portfolio-item - lightbox video -->
+                                            <div class="media-cell video hentry">
+
                                                 <div class="media-box">
-                                                    <img src="images/portfolio/03.jpg" alt="portfolio-post">
-                                                    <div class="mask"></div> -->
-                                                    <!-- lightbox - gallery 
-                                                    <a href="images/portfolio/lightbox-01.jpg" class="lightbox"
-                                                        data-title="Portraits by MERCEDES DEBELLARD"></a>
-                                                    <a href="images/portfolio/lightbox-02.jpg" class="lightbox"
-                                                        data-title="Portraits by MERCEDES DEBELLARD"></a>
-                                                    <a href="images/portfolio/lightbox-03.jpg" class="lightbox"
-                                                        data-title="Portraits by MERCEDES DEBELLARD"></a>
-                                                    <a href="images/portfolio/lightbox-04.jpg" class="lightbox"
-                                                        data-title="Portraits by MERCEDES DEBELLARD"></a> -->
-                                                    <!-- lightbox - gallery
+                                                    <img src="images/portfolio/18.jpg" alt="portfolio-post">
+                                                    <div class="mask"></div>
+                                                    <!-- lightbox - video -->
+                                                    <a href="concept_01.html"></a>
+                                                    <!-- lightbox - video -->
                                                 </div>
+
                                                 <div class="media-cell-desc">
-                                                    <h3>Wizard Adventure</h3>
-                                                    <p class="category">lightbox gallery</p>
+                                                    <h3>Chat App Website</h3>
+                                                    <p class="category"></p>
                                                 </div>
-                                            </div>  -->
-                                            <!-- portfolio-item - lightbox gallery -->
+
+                                            </div>
+                                            <!-- portfolio-item - lightbox video -->
 
 
                                             <!-- portfolio-item - lightbox video -->
