--- a/concept_01.html
+++ b/concept_01.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Pixelwars">
         <meta name="theme-color" content="#1755cf" />
 
-        <title>ikonik</title>
+        <title>ishtiakishti</title>
 
         <!-- FAV and TOUCH ICONS -->
         <link rel="shortcut icon" href="images/home/icon.svg">
