--- a/category01_blog01.html
+++ b/category01_blog01.html
@@ -13,8 +13,8 @@
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="ishtiakishti- promotinal content creator">
-        <meta name="keywords" content="vcard, html5, portfolio">
-        <meta name="author" content="Pixelwars">
+        <meta name="keywords" content="html5, portfolio">
+        <meta name="author" content="ishtiakishti">
         <meta name="theme-color" content="#1755cf" />
 
         <title>ishtiakishti</title>
