--- a/portfolio.html
+++ b/portfolio.html
@@ -401,7 +401,7 @@
                                                     <img src="images/portfolio/18.jpg" alt="portfolio-post">
                                                     <div class="mask"></div>
                                                     <!-- lightbox - video -->
-                                                    <a href="ui/ux_concept_01.html"></a>
+                                                    <a href="uiux_concept_01.html"></a>
                                                     <!-- lightbox - video -->
                                                 </div>
 
