--- a/category01_blog02.html
+++ b/category01_blog02.html
@@ -232,7 +232,8 @@
                                             In this digital world, almost all of the top industries like the travel industry, banking, education, research, military, food etc. are now mostly software driven. Among all the programming languages, most industries use Python and for this reason I call Python <b><i>“the tech sauce”</i></b> due to its usability in almost all of the major leading industries of the world.
                                             <br>
                                             <br>
-                                            In this article, I will talk about the various applications of python so that you can know its applications and select your preferable field/fields and learn python accordingly and efficiently as well as give you an insight as to why you are learning python. I will also write about some of the renowned companies that are now using Python and why they use it.
+                                            In this article, I talked about the various applications of python so that you can know its applications and select your preferable field/fields and learn python accordingly and efficiently. I also wrote about how some of the renowned companies are now using Python.
+
                                             <br>
                                             <h2>Why learn Python?</h2>
                                             Before going to its major applications let us learn about frameworks and libraries.
