--- a/blog-category.html
+++ b/blog-category.html
@@ -237,6 +237,23 @@
 
 
                                             </div> 
+						
+						  <!-- portfolio-item -->
+                                            <div class="media-cell tech hentry">
+
+                                                <div class="media-box">
+                                                    <img src="images/blog/02.jpg" alt="portfolio-post">
+                                                    <div class="mask"></div>
+                                                    <a href="category01_blog02.html"  ></a>
+                                                </div>
+
+                                                <div class="media-cell-desc">
+                                                    <h3>Python – The Tech Sauce?</h3>
+                                                    <p class="category">July 18, 2021</p>
+                                                </div>
+
+
+                                            </div> 
 
                                            
 
