--- a/category01_blog02.html
+++ b/category01_blog02.html
@@ -229,10 +229,10 @@
                                             To make this article tastier, let me mention some food first: - Cheesy Meatball Sliders, Spicy Shrimp Fettuccine Alfredo, Ground Beef Spinach Alfredo Lasagna, Chicken Parmesan Burgers, Chicken Ravioli Bake, Mozzarella Baked Spaghetti, Italian Pasta Bake (alright that’s enough) etc. To complement your food or to make the dish more visually attractive, we add different types of sauce to most of our food.
                                             <br>
                                             <br>
-                                            In this digital world, almost all of the top industries like the travel industry, banking, education, research, military, food etc. are now mostly software driven. Among all the programming languages, most industries use Python and for this reason I call Python <b><i>“the tech sauce”</i></b> due to its usability in almost all of the major leading industries of the world.
+                                            In this digital world, almost all of the top industries like the travel, banking, education, research etc. industries are now mostly software driven. Among all the programming languages, most industries use Python and for this reason I call Python <b><i>“the tech sauce”</i></b> due to its usability in almost all of the major leading industries of the world.
                                             <br>
                                             <br>
-                                            In this article, I talked about the various applications of python so that you can know its applications and select your preferable field/fields and learn python accordingly and efficiently. I also wrote about how some of the renowned companies are now using Python.
+                                            In this article, I talked about the various applications of python so that you can know its applications and select your preferable field/fields and learn python accordingly and efficiently. I also wrote about how some of the most renowned companies are now using Python.
 
                                             <br>
                                             <h2>Why learn Python?</h2>
