--- a/category01_blog02.html
+++ b/category01_blog02.html
@@ -2,13 +2,14 @@
 <html lang="en" class="no-js classic-page-layout " data-audio-tick="audio/tick.mp3" data-click-ripple-animation="yes">
 <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3TGCDK9XBN"></script>
+<script a<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B3QNJ733BF"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3TGCDK9XBN');
+  gtag('config', 'G-B3QNJ733BF');
 </script>
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
