--- a/category01_blog02.html
+++ b/category01_blog02.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js classic-page-layout " data-audio-tick="audio/tick.mp3" data-click-ripple-animation="yes">
 <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script a<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B3QNJ733BF"></script>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1EQT92Y7JH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-B3QNJ733BF');
+  gtag('config', 'G-1EQT92Y7JH');
 </script>
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
