--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
     
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1EQT92Y7JH"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TBXXFTDSGC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-1EQT92Y7JH');
+  gtag('config', 'G-TBXXFTDSGC');
 </script>
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
