--- a/portfolio.html
+++ b/portfolio.html
@@ -2,13 +2,13 @@
 <html lang="en" class="no-js classic-page-layout " data-audio-tick="audio/tick.mp3" data-click-ripple-animation="yes">
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1EQT92Y7JH"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TBXXFTDSGC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-1EQT92Y7JH');
+  gtag('config', 'G-TBXXFTDSGC');
 </script>
     
 		<meta charset="utf-8" />
