--- a/category01_blog01.html
+++ b/category01_blog01.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js classic-page-layout " data-audio-tick="audio/tick.mp3" data-click-ripple-animation="yes">
 <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TBXXFTDSGC"></script>
+       <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HHX89BBGY8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-TBXXFTDSGC');
+  gtag('config', 'G-HHX89BBGY8');
 </script>
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
