--- a/blog-category.html
+++ b/blog-category.html
@@ -2,15 +2,14 @@
 <html lang="en" class="no-js classic-page-layout " data-audio-tick="audio/tick.mp3" data-click-ripple-animation="yes">
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HHX89BBGY8"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HD3D21E7TK"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HHX89BBGY8');
+  gtag('config', 'G-HD3D21E7TK');
 </script>
-    
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="ishtiakishti- promotinal content creator">
