--- a/category01_blog02.html
+++ b/category01_blog02.html
@@ -4,13 +4,13 @@
       
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HHX89BBGY8"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HD3D21E7TK"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HHX89BBGY8');
+  gtag('config', 'G-HD3D21E7TK');
 </script>
 	
 		<meta charset="utf-8" />
