--- a/category01_blog01.html
+++ b/category01_blog01.html
@@ -2,13 +2,13 @@
 <html lang="en" class="no-js classic-page-layout " data-audio-tick="audio/tick.mp3" data-click-ripple-animation="yes">
 <head>
        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HD3D21E7TK"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1WXRYHFKVJ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HD3D21E7TK');
+  gtag('config', 'G-1WXRYHFKVJ');
 </script>
 		<meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
