--- a/category01_blog02.html
+++ b/category01_blog02.html
@@ -3,14 +3,14 @@
 <head>
       
 	
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HD3D21E7TK"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-578MX0EHD3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HD3D21E7TK');
+  gtag('config', 'G-578MX0EHD3');
 </script>
 	
 		<meta charset="utf-8" />
