--- a/category01_blog02.html
+++ b/category01_blog02.html
@@ -20,7 +20,7 @@
         <meta name="author" content="ishtiakishti">
         <meta name="theme-color" content="#1755cf" />
 
-        <title>ishtiakishti</title>
+        <title>Python– The Tech Sauce?</title>
 
         <!-- FAV and TOUCH ICONS -->
         <link rel="shortcut icon" href="images/home/icon.svg">
