--- a/blog-category.html
+++ b/blog-category.html
@@ -17,7 +17,7 @@
         <meta name="author" content="ishtiakishti">
         <meta name="theme-color" content="#1755cf" />
 
-        <title>ishtiakishti</title>
+        <title>Blog</title>
 
         <!-- FAV and TOUCH ICONS -->
         <link rel="shortcut icon" href="images/home/icon.svg">
