--- a/resume.html
+++ b/resume.html
@@ -286,8 +286,8 @@
 
 
 
-                                                <!--<p><a href="#" class="button  primary"><i class="pw-icon-doc-alt"></i>Download
-                                                        CV</a></p> -->
+                                               <p><a href="https://drive.google.com/file/d/1x06K2fPNUWCY-dIf85qMoKms-U4WeEb-/view?usp=sharing" class="button  primary"><i class="pw-icon-doc-alt"></i>Download
+                                                        CV</a></p>
 
                                             </div>
                                             <!-- col -->
