--- a/about.html
+++ b/about.html
@@ -2,23 +2,23 @@
 <html lang="en" class="no-js classic-page-layout " data-audio-tick="audio/tick.mp3" data-click-ripple-animation="yes">
 <head>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TBXXFTDSGC"></script>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FH882GMX90"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-TBXXFTDSGC');
+  gtag('config', 'G-FH882GMX90');
 </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="ishtiakishti- promotinal content creator">
+    <meta name="description" content="ishtiakishti">
     <meta name="keywords" content="vcard, html5, portfolio">
     <meta name="author" content="Pixelwars">
     <meta name="theme-color" content="#1755cf" />
 
-    <title>ishtiakishti</title>
+    <title>About</title>
 
     <!-- FAV and TOUCH ICONS -->
     <link rel="shortcut icon" href="images/home/icon.svg">
@@ -79,13 +79,10 @@
                     <div class="home-heading">
                         <div class="home-logo">
 
-                            <p class="home-job-title">Promotional Content Creator</p>
+                            <p class="home-job-title"></p>
 
                             <p class="home-marquee">
-                                I create promotional contents and user interfaces for various businesses and also I love cats and coffee.
-                                I create promotional contents and user interfaces for various businesses and also I love cats and coffee.
-                                I create promotional contents and user interfaces for various businesses and also I love cats and coffee.
-                                I create promotional contents and user interfaces for various businesses and also I love cats and coffee. 
+                                
                             </p>
 
                             <!--<i class="home-logo-left "><span>Web</span></i>-->
@@ -210,8 +207,8 @@
 
                                               <div class="col-sm-9">
 
-                                                  <h2 class="fw-300">Hello, I am Ishtiak Ahmed, a <strong>promotional content creator</strong> based in Dhaka, Bangladesh.
-                                                I create promotional contents and user interfaces for various businesses and also I love cats and coffee. 
+                                                  <h2 class="fw-300">Hello, I am Ishtiak Ahmed living in Dhaka, Bangladesh. I am a learner and a teacher having interests on the topics stated below. 
+I also have a knack for personal branding, personal finance, tech and productivity.  Besides, I develop websites for various businesses, personal projects and portfolio. So, if you need one, you know where to come. And I also love two more things: your cat and my coffee. 
                                                   </h2>
 
                                               </div>
@@ -225,7 +222,7 @@
                                       <!-- section-title -->
                                       <div class="section-title center">
                                           <h2>
-                                              <i>What I do</i>
+                                              <i>Interests</i>
                                           </h2>
                                       </div>
                                       <!-- section-title -->
@@ -239,8 +236,8 @@
                                               <!-- service -->
                                               <div class="service">
                                                   <img src="images/site/service-01.svg" alt="image" />
-                                                  <h3>Design</h3>
-                                                  <p>Any business today needs a website that wins customers' trust and helps their do their business well. I design beautiful and powerful websites for your modern business and make sure your website is upto that standard. </p>
+                                                  <h3>Data Analytics</h3>
+                                                  <p>Data analytics helps to analyze and visualize data to make better and informed decisions. I am not fond of gut feelings and it never worked for me, what I think will happen , it might not happen as thought. But the data ‘is what it is’ . I believe in data-driven decisions and from this belief I started learning data analytics.</p>
                                               </div>
                                               <!-- service -->
 
@@ -253,10 +250,8 @@
                                               <!-- service -->
                                               <div class="service">
                                                   <img src="images/site/service-02.svg" alt="image" />
-                                                  <h3>Animation</h3>
-                                                  <p>Animated videos helps to gain recognition of any service and sell products quickly. I create amazing short videos for you with Motion Graphic effects which are very useful to attract new customers and increase the sales and repuation of any business in social media and the market.
-
-                                                </p>
+                                                  <h3>UX Design</h3>
+                                                  <p>Its interdisciplinary nature and how it plugs into any field is why I got interested in UX design. To understand the relationship between humans and technology, the relationship between humans and products excites me and UX design is a great way to learn the both sides of the equation. </p>
                                               </div>
                                               <!-- service -->
 
@@ -268,9 +263,9 @@
 
                                               <!-- service -->
                                               <div class="service">
-                                                  <img src="images/site/service-03.svg" alt="image" />
-                                                  <h3>Video Editing</h3>
-                                                  <p>Anyone who has a message, dream, business, brand, or something they want to get out to the world, video is the most effective way to do it. I can edit videos for your YouTube channels, commercials, social media ads etc and help you showcase your message to the world.</p>
+                                                  <img src="images/site/icons8-learning-100.png" alt="image" style="opacity: 0.6;"/>
+                                                  <h3>Machine Learning</h3>
+                                                  <p>Machine learning covers significant ground in various verticals. The application of ML in data analytics, research and in developing tech products interests me.</p>
                                               </div>
                                               <!-- service -->
 
@@ -283,8 +278,8 @@
                                               <!-- service -->
                                               <div class="service">
                                                   <img src="images/site/service-04.svg" alt="image" />
-                                                  <h3>Development </h3>
-                                                  <p> Website is the best way to make people aware of the services and/or products you are offering. I can develop websites according to your requirements. I can also redesign or redevelop your existing websites.</p>
+                                                  <h3>Products</h3>
+                                                  <p> I am curious to learn and research about products that are solving problems, satisfying customer needs and evolving in a scalable manner. I will be writing about various products (existing and product ideas) on my blog section and also would love to hear your thoughts and ideas on the products you are interested in.</p>
                                               </div>
                                               <!-- service -->
 
@@ -485,19 +480,7 @@
 
 
 
-            <!-- .site-footer 
-            <footer id="colophon" class="site-footer" role="contentinfo">
-
-                <!-- .site-info 
-                <div class="site-info">
-                    <div class="textwidget">
-                        <p><a href="http://pixelwars.org/">Copyright &copy; 2017 by Pixelwars</a></p>
-                    </div>
-                </div>
-                <!-- .site-info 
-
-            </footer>
-            <!-- .site-footer -->
+            
 
 
 
