--- a/resume.html
+++ b/resume.html
@@ -257,7 +257,7 @@
 
                                                 <div class="event">
                                                     <h3>July 2020 - Sept 2020</h3>
-                                                    <h4>Video Editor</h4>
+                                                    <h4>Video Editor Intern</h4>
                                                     <h5>The Bangladeshi Perspective</h5>
                                                     <p>During my time in The Bangladeshi Perspective I edited many videos for the platform that aims to connect Bangladeshi students with the knowledge and mentoring of amazing Bangladeshis around the world.</p>
                                                 </div>
