--- a/resume.html
+++ b/resume.html
@@ -225,7 +225,7 @@
                                                     <p>I would say my learning journey started from June 2020. During that time I started learning animation and video editing for a TEDx project of my university. From there I found interest in this animation and video editing sector. Learned a lot about them. With my creative skills and my younger brother's tech skills we thought of starting an on demand e-commerce business. We eventually started that, the name of the business and the website was Amader Delivery. We conducted operations for around 7 months then we had to stop the business as it was difficult for us to maintain the riders and had some scalability problems. We delivered around 200+ products in the span of 7 months. I guess not bad for two young entrepreneurs. But we both learned a lot during this time.
                                                          <br>  
                                                          <br>    
-                                                        During that time I got interested in tech, product development. Researched a lot about startup cultures, saw how they scaled, solved problems; tried to understand their business. A funny story is once I used to open the Pathao app for rides and ordering food but from then I started observing the user flows, the number of steps to get my order done, I used to think how the user experience could be improved. This was not only for Pathao app but also any other app or product that I came across. And as I was handling a good amount of data, my interest in data analytics started rising. 
+                                                        During that time I got interested in tech, product development. Researched a lot about startup cultures, saw how they scaled, solved problems; tried to understand their business. A funny story is once I used to open the Pathao app for rides and ordering food only but from then I also started observing the user flows, the number of steps to get my order done, I used to think how the user experience could be improved. This was not only for Pathao app but also any other app or product that I came across. And as I was handling a good amount of data, my interest in data analytics started rising. 
                                                         <br>  
                                                          <br> 
                                                         My transition from animation, video editor to someone who wants to understand data, customer relationship with different products and technology, building websites, learning how to be productive, how to do more and having an urge to create an impact with my work happened from April, 2021. 
@@ -294,7 +294,7 @@
 
 
 
-                                                <p><a href="https://drive.google.com/file/d/1x06K2fPNUWCY-dIf85qMoKms-U4WeEb-/view?usp=sharing" class="button  primary"><i class="pw-icon-doc-alt"></i>Download
+                                                <p><a href="https://drive.google.com/file/d/1ri65oL_sTWHX32d9REU9e80M3mtD8sta/view?usp=sharing" class="button  primary"><i class="pw-icon-doc-alt"></i>Download
                                                         CV</a></p>
 
                                             </div>
