Update case study-category .html

--- a/case study-category .html
+++ b/case study-category .html
@@ -18,7 +18,7 @@
     <meta name="author" content="Pixelwars">
     <meta name="theme-color" content="#1755cf" />
 
-    <title>Case Studies</title>
+    <title>Case Study</title>
 
     <!-- FAV and TOUCH ICONS -->
     <link rel="shortcut icon" href="images/home/icon.svg">
