--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <a href="resume.html" data-slug="resume">
                 <span class="item-name">Resume</span>
             </a>
-            <a href="case study-category .html" data-slug="portfolio" id="portfolio-link">
+            <a href="case study-category .html" data-slug="case study">
                 <span class="item-name">Case Studies</span>
             </a>
             <a href="blog-category.html" data-slug="blog">
