--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <span class="item-name">Resume</span>
             </a>
             <a href="case study-category .html" data-slug="case_study">
-                <span class="item-name">Case Studies</span>
+                <span class="item-name">Case Study</span>
             </a>
             <a href="blog-category.html" data-slug="blog">
                 <span class="item-name">Blog</span>
