--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <meta name="author" content="Pixelwars">
     <meta name="theme-color" content="#1755cf" />
 
-    <title>About</title>
+    <title>About Me</title>
 
     <!-- FAV and TOUCH ICONS -->
     <link rel="shortcut icon" href="images/home/icon.svg">
