--- a/category01_blog01.html
+++ b/category01_blog01.html
@@ -84,7 +84,7 @@
                                    
                                 </p>
 
-                                <!--<i class="home-logo-left "><span>Web</span></i>-->
+                                <!--<i class="home-logo-left "><span></span></i>-->
                                 <i class="home-logo-center">
                                     <span class="home-icon">
                                         <img src="images/home/icon.svg" alt="icon" />
@@ -94,7 +94,7 @@
                                     </span>
                                     <span class="home-text">Ishtiak Ahmed</span>
                                 </i>
-                                <!--<i class="home-logo-right"><span>Developer</span></i>-->
+                                <!--<i class="home-logo-right"><span></span></i>-->
                             </div>
                         </div>
                         
