--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'G-FH882GMX90');
 </script>
-    <meta charset="utf-8" />
+            <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="ishtiakishti">
     <meta name="keywords" content="vcard, html5, portfolio">
@@ -85,7 +85,7 @@
                                 
                             </p>
 
-                            <!--<i class="home-logo-left "><span>Web</span></i>-->
+                            <!--<i class="home-logo-left "><span></span></i>-->
                             <i class="home-logo-center">
                                 <span class="home-icon">
                                     <img src="images/home/icon.svg" alt="icon" />
@@ -95,7 +95,7 @@
                                 </span>
                                 <span class="home-text">Ishtiak Ahmed</span>
                             </i>
-                            <!--<i class="home-logo-right"><span>Developer</span></i>-->
+                            <!--<i class="home-logo-right"><span></span></i>-->
                         </div>
                     </div>
 
