--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta name="author" content="ishtiakishti">
         <meta name="theme-color" content="#1755cf" />
 
-        <title>ishtiakishti</title>
+        <title> Home </title>
 
         <!-- FAV and TOUCH ICONS -->
         <link rel="shortcut icon" href="images/home/icon.svg">
