--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!-- .home-menu -->
         <nav class="home-menu">
-            <a href="./about.html" data-slug="about">
+            <a href="/about.html" data-slug="about">
                 <span class="item-name">About</span>
             </a>
             <a href="resume.html" data-slug="resume">
