--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 
         <!-- .home-menu -->
         <nav class="home-menu">
-            <a href="/about.html" data-slug="about">
+            <a href="about.html" data-slug="about.html">
                 <span class="item-name">About</span>
             </a>
-            <a href="resume.html" data-slug="resume">
+            <a href="resume.html" data-slug="resume.html">
                 <span class="item-name">Resume</span>
             </a>
-            <a href="case-study.html" data-slug="case_study">
+            <a href="case-study.html" data-slug="case-study.html">
                 <span class="item-name">Case Study</span>
             </a>
-            <a href="blog-category.html" data-slug="blog">
+            <a href="blog-category.html" data-slug="blog-category.html">
                 <span class="item-name">Blog</span>
             </a>
-            <a href="contact.html" data-slug="contact">
+            <a href="contact.html" data-slug="contact.html">
                 <span class="item-name">Contact</span>
             </a>
         </nav>
