--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 
         <!-- .home-menu -->
         <nav class="home-menu">
-            <a href="about.html" data-slug="about.html">
+            <a href="about.html" data-slug="about">
                 <span class="item-name">About</span>
             </a>
-            <a href="resume.html" data-slug="resume.html">
+            <a href="resume.html" data-slug="resume">
                 <span class="item-name">Resume</span>
             </a>
-            <a href="case-study.html" data-slug="case-study.html">
+            <a href="case-study.html" data-slug="case-study">
                 <span class="item-name">Case Study</span>
             </a>
-            <a href="blog-category.html" data-slug="blog-category.html">
+            <a href="blog-category.html" data-slug="blog-category">
                 <span class="item-name">Blog</span>
             </a>
-            <a href="contact.html" data-slug="contact.html">
+            <a href="contact.html" data-slug="contact">
                 <span class="item-name">Contact</span>
             </a>
         </nav>
