--- a/resume.html
+++ b/resume.html
@@ -220,21 +220,11 @@
 
                                                 <div class="event">
                                                     <h3>June 2020 - Current</h3>
-                                                    <h4>My Story</h4>
+                                                    <h4>Freelancer</h4>
                                                     <h5>ishtiakishti</h5>
-                                                    <p>I would say my learning journey started from June 2020. During that time I started learning animation and video editing for a TEDx project of my university. From there I found interest in this animation and video editing sector. Learned a lot about them. With my creative skills and my younger brother's tech skills we thought of starting an on demand e-commerce business. We eventually started that, the name of the business and the website was Amader Delivery. We conducted operations for around 7 months then we had to stop the business as it was difficult for us to maintain the riders and had some scalability problems. We delivered around 200+ products in the span of 7 months. I guess not bad for two young entrepreneurs. But we both learned a lot during this time.
-                                                         <br>  
-                                                         <br>    
-                                                        During that time I got interested in tech, product development. Researched a lot about startup cultures, saw how they scaled, solved problems; tried to understand their business. A funny story is once I used to open the Pathao app for rides and ordering food only but from then I also started observing the user flows, the number of steps to get my order done, I used to think how the user experience could be improved. This was not only for Pathao app but also any other app or product that I came across. And as I was handling a good amount of data, my interest in data analytics started rising. 
-                                                        <br>  
-                                                         <br> 
-                                                        My transition from animation, video editor to someone who wants to understand data, customer relationship with different products and technology, building websites, learning how to be productive, how to do more and having an urge to create an impact with my work happened from April, 2021. 
-                                                        <br>  
-                                                         <br> 
-                                                        I won't say now I know what I will be doing 5 years or 10 years in the future. Nobody knows what changes will be coming in future. Right now I will be more focusing on developing my skills in my interested fields, also learn how to handle finances, how to sell and market products, how to understand the customer pain points and ways to satisfying them, how to effectively communicate with the team, the stakeholders, being a good communicator and a leader.
-                                                        <br>  
-                                                        <br> 
-                                                        Now I try to post in my social platforms (once or twice a week) about what I learn from various topics which interests me. Also write blogs and case studies in my website. My design and animation skills are now coming extremely handy for making these posts. I also have a small team for developing websites for various businesses, personal projects and portfolio.</p>
+                                                    <p>
+                                                    
+                                                       I post in my social platforms (once or twice a week) about what I learn from various topics which interests me. I also write blogs and case studies in my website. My design and animation skills are now coming extremely handy for making these posts. I also have a small team for developing websites for various businesses, personal projects and portfolio.</p>
                                                 </div>
 
 
