--- a/case-study.html
+++ b/case-study.html
@@ -204,7 +204,7 @@
                                         <!--FILTERS-->
                                         <ul id="filters" class="filters">
                                            <li class="current">
-                                                <a href="#" data-filter="*">All</a>
+                                                <a href="#" data-filter="*"></a>
                                             </li>
                                             <li>
                                                 <a href="#" data-filter=".tech"></a>
@@ -213,7 +213,7 @@
                                                 <a href="#" data-filter=".design"></a>
                                             </li>
                                             <li>
-                                                <a href="#" data-filter=".analytics">Analytics</a>
+                                                <a href="#" data-filter=".analytics"></a>
                                             </li>
                                             
                                         </ul>
