--- a/resume.html
+++ b/resume.html
@@ -284,7 +284,7 @@
 
 
 
-                                                <p><a href="https://drive.google.com/file/d/1ri65oL_sTWHX32d9REU9e80M3mtD8sta/view?usp=sharing" class="button  primary"><i class="pw-icon-doc-alt"></i>Download
+                                                <p><a href="https://drive.google.com/file/d/1JKDQBondw4jV_xtS809Z-1Kf6ZN8wnG2/view?usp=sharing"></i>Download
                                                         CV</a></p>
 
                                             </div>
