--- a/resume.html
+++ b/resume.html
@@ -285,7 +285,7 @@
 
 
                                                 <p><a href="https://drive.google.com/file/d/1JKDQBondw4jV_xtS809Z-1Kf6ZN8wnG2/view?usp=sharing"></i>Download
-                                                        CV</a></p>
+                                                        Resume</a></p>
 
                                             </div>
                                             <!-- col -->
