--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
             <a href="case-study.html" data-slug="case-study">
                 <span class="item-name">Case Study</span>
             </a>
+		<a href="portfolio.html" data-slug="portfolio">
+                <span class="item-name">Portfolio</span>
+            </a>
             <a href="blog-category.html" data-slug="blog-category">
                 <span class="item-name">Blog</span>
             </a>
