--- a/resume.html
+++ b/resume.html
@@ -224,7 +224,7 @@
                                                     <h5>ishtiakishti</h5>
                                                     <p>
                                                     
-                                                       I post in my social platforms (once or twice a week) about what I learn from various topics which interests me. I also write blogs and case studies in my website. My design and animation skills are coming extremely handy for making these posts. I also have a small team for developing websites for various businesses, personal projects and portfolio.</p>
+                                                      I post in my social platforms (once or twice a week) about what I learn from various topics which interests me. I also write blogs and case studies in my website. I also have a small team to provide all the services mentioned in the about section. </p>
                                                 </div>
 
 
