--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <a href="resume.html" data-slug="resume">
                 <span class="item-name">Resume</span>
             </a>
-		<a href="portfolio.html" data-slug="portfolio">
+		<!-- <a href="portfolio.html" data-slug="portfolio">
                 <span class="item-name">Portfolio</span>
-            </a>
+            </a> -->
             <a href="case-study.html" data-slug="case-study">
                 <span class="item-name">Case Study</span>
             </a>
