--- a/about.html
+++ b/about.html
@@ -207,7 +207,7 @@
 
                                               <div class="col-sm-9">
 
-                                                  <h2 class="fw-300">Hello, I am Ishtiak Ahmed living in Dhaka, Bangladesh. I am a learner and a teacher having interests on the topics stated below. I also have a knack for personal branding, personal finance, tech and productivity. And I also love two more things: your cat and my coffee. Currently, I am studying BSc in Mechanical Engineering in IUT. I am also affiliated with IUT Career and Business Society and IUT Mars Rover Team and Team ANTS of IUT. Besides my academics I am also working on some personal projects and case studies about which I will keep updating in my website and social platform.  
+                                                  <h2 class="fw-300">Hello, I am Ishtiak Ahmed living in Dhaka, Bangladesh. I am a learner and a teacher having interests on the topics stated below. I also have a knack for personal branding, personal finance, tech and productivity. And I also love two more things: your cat and my coffee. Besides my academics I am also working on some personal projects and case studies about which I will keep updating in my website and social platform.  
                                                   </h2>
 
                                               </div>
