--- a/case-study.html
+++ b/case-study.html
@@ -237,7 +237,7 @@
                                                 </div>
 
                                                 <div class="media-cell-desc">
-                                                    <h3>Analysis of the Global Data on Covid-19 Pandemic mainly focusing on Bangladesh until 01 September 2021: A case study</h3>
+                                                    <h3> <a href="https://ishtiak138.hashnode.dev/analysis-of-the-global-data-on-covid-19-pandemic-mainly-focusing-on-bangladesh-until-01-september-2021-a-case-study"  ></a> Analysis of the Global Data on Covid-19 Pandemic mainly focusing on Bangladesh until 01 September 2021: A case study</h3>
                                                     <p class="category">September 06, 2021</p>
                                                 </div>
 
