--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <!-- .home-logo -->
             <div class="home-logo">
 
-                <p class="home-job-title">A learner and a teacher</p>
+                <p class="home-job-title"></p>
 
                 <p class="home-marquee">
                     To know more about me please visit the about section.
